[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "fluent-uri-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
fluent-uri = { git = "https://github.com/yescallop/fluent-uri-rs.git" }
[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
